--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
 		</div>
 		<div class="main">
 			<h1>A little <span class="hMark">about me</span></h1>
-			<p>I'm Stalp. I started programming at December 15, 2017.</p>
+			<p>I'm Stalp, a self-taught hobby programmer that code in
+			Scratch, C#, javascript, HTML and CSS. 
+			My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15.</p>
+			<br>
+			I also enjoy playing <a href="http://slither.io">slither.io</a>, 
+			<a href="https://bonk.io">bonk.io</a>, 
+			<a href="http://superhex.io">superhex.io</a> and more!
 
 			<h1>What I'm <span class="hMark">working on</span></h1>
 			<ul>
