--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<br>
 			I also enjoy playing <a href="http://slither.io">slither.io</a>, 
 			<a href="https://bonk.io">bonk.io</a>, 
-			<a href="http://superhex.io">superhex.io</a> and more!
+			<a href="http://superhex.io">superhex.io</a> and more!</p>
 
 			<h1>What I'm <span class="hMark">working on</span></h1>
 			<ul>
