--- a/index.html
+++ b/index.html
@@ -4,36 +4,8 @@
 		<link rel="icon" href="icon.png" />
 		<title>Stalpinth - Home</title>
 		<meta charset="UTF-8">
-		<style>
-			.main {
-				max-width: 700px;
-				margin: 0 auto;
-				padding: 80px;
-				position: relative;
-
-				font-size: 18px;
-				font-weight: 400;
-				line-height: 1.6;
-			}
-			
-			.nav {
-				z-index: 10;
-				position: fixed;
-				margin: 0;
-				padding: 0;
-				left: 0;
-				top: 0;
-				width: 100%;
-				height: 60px;
-				
-				box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
-			}
-
-			h1 {
-				line-height: 1.3;
-				margin: 8px 0;
-			}
-		</style>
+		
+		<link rel="stylesheet" type="text/css" href="common.css">
 		<link rel="stylesheet" type="text/css" href="light.css">
 	</head>
 	<body>
@@ -44,11 +16,10 @@
 			<h1>A little <span class="hMark">about me</span></h1>
 			<p>I'm Stalp, a self-taught hobby programmer that code in
 			Scratch, C#, javascript, HTML and CSS. 
-			My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15.</p>
-			<br>
+			My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
 			I also enjoy playing <a href="http://slither.io">slither.io</a>, 
 			<a href="https://bonk.io">bonk.io</a>, 
-			<a href="http://superhex.io">superhex.io</a> and more!
+			<a href="http://superhex.io">superhex.io</a> and more!</p>
 
 			<h1>What I'm <span class="hMark">working on</span></h1>
 			<ul>
