--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<link rel="icon" href="icon.png" />
+		<link rel="icon" href="favicon.ico" />
 		<title>Stalpinth - Home</title>
 		<meta charset="UTF-8">
 		
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="nav">
-			<!-- <a href="https://stalpinth.com"> <img src="home.png" alt="Logo" width="183.4" height="55.74"> </a> -->
+			<!-- <a href="https://www.stalpinth.com"> <img src="home.png" alt="Logo" width="183.4" height="55.74"> </a> -->
 		</div>
 		<div class="main">
 			<h1>A little <span class="hMark">about me</span></h1>
@@ -38,6 +38,13 @@
 
 			<h1>Things <span class="hMark">I've made</span></h1>
 			
+			<div class="footer">
+				<a class="social" href="https://github.com/Stalpinth/"><img src="github.svg" alt="Github"></a>
+				<a class="social" href="https://scratch.mit.edu/users/Stalpinth/"><img src="scratch.svg" alt="Scratch"></a>
+				<!-- <a class="social" href="https://codepen.io/Stalpinth"><img src="codepen.svg" alt="Codepen"></a>
+				<a class="social" href="https://www.youtube.com/Stalpinth"><img src="youtube.svg" alt="Youtube"></a>
+				<a class="SomeLink" href="/???/">Text Here</a> -->
+			</div>	
 		</div>
 	</body>
 </html>
