--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<link rel="icon" href="favicon.ico" />
-		<title>Stalpinth - Home</title>
-		<meta charset="UTF-8">
+<head>
+	<link rel="icon" href="favicon.ico" />
+	<title>Stalpinth - Home</title>
+	<meta charset="UTF-8">
+	
+	<link rel="stylesheet" href="style.scss">
+</head>
+<body>
+    <header class="page-header" role="banner">
+      <h1 class="project-name">Stalpinth</h1>
+      <h2 class="project-tagline">An experience in coding.</h2>
+
+      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+	  <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+      <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+    </header>
+	
+	
+	<!-- <div class="main">
+		<h1>A little <span class="hMark">about me</span></h1>
+		<p>I'm Stalp, a self-taught hobby programmer that code in
+		Scratch, C#, javascript, HTML and CSS.
+		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
+		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
+		<a href="https://bonk.io">bonk.io</a>, 
+		<a href="http://superhex.io">superhex.io</a> and more!</p>
+
+		<h1>What I'm <span class="hMark">working on</span></h1>
+		<ul>
+		<li>A pixel platformer in C#</li>
+		<li>Slime - A platformer with a slime as the player</li>
+		<li>Hide - A dark game where you have to escape and avoid lights</li>
+		<li>Stick-Man - An unquine platformer with chalkboard theme</li>
+		<li>Vector Tile Platformer (with level editor!)</li>
+		<li>Full 3D Engine (have worked on it for a long time)</li>
+		<li>3D Tutorial</li>
+		<li>Multiplayer Engine</li>
+		<li>Tower Defense Game</li>
+		<li>Sudoku Sandbox - You can make everything with a sudoku!</li>
+		<li>Tic-Tac-Toe Bot</li>
+		</ul>
+
+		<h1>Things <span class="hMark">I've made</span></h1>
 		
-		<link rel="stylesheet" type="text/css" href="common.css">
-		<link rel="stylesheet" type="text/css" href="light.css">
-	</head>
-	<body>
-		<div class="nav">
-			<!-- <a href="https://www.stalpinth.com"> <img src="home.png" alt="Logo" width="183.4" height="55.74"> </a> -->
+		<div class="footer">
+			<a class="social" href="https://github.com/Stalpinth/"><img src="github.svg" alt="Github"></a>
+			<a class="social" href="https://scratch.mit.edu/users/Stalpinth/"><img src="scratch.svg" alt="Scratch"></a>
+			<!-- <a class="social" href="https://codepen.io/Stalpinth"><img src="codepen.svg" alt="Codepen"></a>
+			<a class="social" href="https://www.youtube.com/Stalpinth"><img src="youtube.svg" alt="Youtube"></a>
+			<a class="SomeLink" href="/???/">Text Here</a>
 		</div>
-		<div class="main">
-			<h1>A little <span class="hMark">about me</span></h1>
-			<p>I'm Stalp, a self-taught hobby programmer that code in
-			Scratch, C#, javascript, HTML and CSS.
-			My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
-			I also enjoy playing <a href="http://slither.io">slither.io</a>, 
-			<a href="https://bonk.io">bonk.io</a>, 
-			<a href="http://superhex.io">superhex.io</a> and more!</p>
-
-			<h1>What I'm <span class="hMark">working on</span></h1>
-			<ul>
-			<li>A pixel platformer in C#</li>
-			<li>Slime - A platformer with a slime as the player</li>
-			<li>Hide - A dark game where you have to escape and avoid lights</li>
-			<li>Stick-Man - An unquine platformer with chalkboard theme</li>
-			<li>Vector Tile Platformer (with level editor!)</li>
-			<li>Full 3D Engine (have worked on it for a long time)</li>
-			<li>3D Tutorial</li>
-			<li>Multiplayer Engine</li>
-			<li>Tower Defense Game</li>
-			<li>Sudoku Sandbox - You can make everything with a sudoku!</li>
-			<li>Tic-Tac-Toe Bot</li>
-			</ul>
-
-			<h1>Things <span class="hMark">I've made</span></h1>
-			
-			<div class="footer">
-				<a class="social" href="https://github.com/Stalpinth/"><img src="github.svg" alt="Github"></a>
-				<a class="social" href="https://scratch.mit.edu/users/Stalpinth/"><img src="scratch.svg" alt="Scratch"></a>
-				<!-- <a class="social" href="https://codepen.io/Stalpinth"><img src="codepen.svg" alt="Codepen"></a>
-				<a class="social" href="https://www.youtube.com/Stalpinth"><img src="youtube.svg" alt="Youtube"></a>
-				<a class="SomeLink" href="/???/">Text Here</a> -->
-			</div>	
-		</div>
-	</body>
+	</div> -->
+</body>
 </html>
