Set theme cayman

--- a/404.html
+++ b/404.html
@@ -8,8 +8,10 @@
 <html lang="en-US">
 	<head>
 		<link rel="icon" href="favicon.ico" />
-		<title>Stalpinth - Page Not Found</title>
+		<title>404 Error - Stalpinth</title>
 		<meta charset="UTF-8">
+		
+		<link rel="stylesheet "href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
 		<style>
 			
 		</style>
