--- a/index.html
+++ b/index.html
@@ -2,55 +2,54 @@
 <html lang="en-US">
 <head>
 	<link rel="icon" href="favicon.ico" />
-	<title>Stalpinth - Home</title>
+	<title>Home - Stalpinth</title>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet" href="style.scss">
+	<link rel="stylesheet "href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">Stalpinth</h1>
-      <h2 class="project-tagline">An experience in coding.</h2>
+      <h2 class="project-tagline">This website is a work in progress - it's not done.</h2>
 
-      <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-	  <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-      <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/Stalpinth" class="btn">GitHub Profile</a>
+	  <a href="https://scratch.mit.edu/users/Stalpinth" class="btn">Scratch Profile</a>
+	  <!--<a href="https://codepen.io/Stalpinth" class="btn">Codepen Profile</a>
+	  <a href="https://www.youtube.com/user/Stalpinth" class="btn">Youtube Channel</a>-->
     </header>
+	<main id="content" class="main-content" role="main">
 	
+	<h1>A little about me</h1>
+	<p>I'm Stalp, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
+	My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
+	I also enjoy playing <a href="http://slither.io">slither.io</a>, 
+	<a href="https://bonk.io">bonk.io</a>, 
+	<a href="http://superhex.io">superhex.io</a>, 
+	<a href="http://spinz.io">spinz.io</a>, 
+	<a href="https://agar.io">agar.io</a>, 
+	<a href="http://www.robtopgames.com/">Geomery Dash</a>, 
+	<a href="https://minecraft.net">Minecraft</a>, and more!</p>
 	
-	<!-- <div class="main">
-		<h1>A little <span class="hMark">about me</span></h1>
-		<p>I'm Stalp, a self-taught hobby programmer that code in
-		Scratch, C#, javascript, HTML and CSS.
-		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
-		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
-		<a href="https://bonk.io">bonk.io</a>, 
-		<a href="http://superhex.io">superhex.io</a> and more!</p>
-
-		<h1>What I'm <span class="hMark">working on</span></h1>
-		<ul>
-		<li>A pixel platformer in C#</li>
-		<li>Slime - A platformer with a slime as the player</li>
-		<li>Hide - A dark game where you have to escape and avoid lights</li>
-		<li>Stick-Man - An unquine platformer with chalkboard theme</li>
-		<li>Vector Tile Platformer (with level editor!)</li>
-		<li>Full 3D Engine (have worked on it for a long time)</li>
-		<li>3D Tutorial</li>
-		<li>Multiplayer Engine</li>
-		<li>Tower Defense Game</li>
-		<li>Sudoku Sandbox - You can make everything with a sudoku!</li>
-		<li>Tic-Tac-Toe Bot</li>
-		</ul>
-
-		<h1>Things <span class="hMark">I've made</span></h1>
-		
-		<div class="footer">
-			<a class="social" href="https://github.com/Stalpinth/"><img src="github.svg" alt="Github"></a>
-			<a class="social" href="https://scratch.mit.edu/users/Stalpinth/"><img src="scratch.svg" alt="Scratch"></a>
-			<!-- <a class="social" href="https://codepen.io/Stalpinth"><img src="codepen.svg" alt="Codepen"></a>
-			<a class="social" href="https://www.youtube.com/Stalpinth"><img src="youtube.svg" alt="Youtube"></a>
-			<a class="SomeLink" href="/???/">Text Here</a>
-		</div>
-	</div> -->
+	<h1>What I'm working on</h1>
+	<ul>
+		<li><a href="blacktown">Blacktown</a></li>
+		<li><a href="https://scratch.mit.edu/projects/253247601/">Slime</a></li>
+		<li><a href="https://scratch.mit.edu/projects/257133713/">Hide</a></li>
+		<li>Stick-Man in Scratch - A chalkboard themed scrolling platformer</li>
+		<li><a href="https://scratch.mit.edu/projects/257106834/">Unnamed</a></li>
+		<li>3d engine in Scratch</li>
+		<li>3d eutorial in Scratch</li>
+		<li>Unnamed tower defense in Scratch</li>
+		<li>Some small javascript games</li>
+	</ul>
+	
+	<h1>Things I've Made</h1>
+	<blockquote class="project">
+	<h3>Project</h3>
+	<p>This project is just... WOW. Such amazing. Much skill. So cool. AND THIS IS JUST TEXT, RIGHT?!?!?!?!!?!?? Even more text about this awesome project. Cool, right?</p>
+	</blockquote>
+	
+	</main>
 </body>
 </html>
