--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<li>Stick-Man in Scratch - A chalkboard themed scrolling platformer</li>
 		<li><a href="https://scratch.mit.edu/projects/257106834/">Unnamed</a></li>
 		<li>3d engine in Scratch</li>
-		<li>3d eutorial in Scratch</li>
+		<li>3d tutorial in Scratch</li>
 		<li>Unnamed tower defense in Scratch</li>
 		<li>Some small javascript games</li>
 	</ul>
