--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<link rel="icon" href="favicon.ico" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<title>Home - Stalpinth</title>
 	<meta charset="UTF-8">
 	
@@ -10,46 +11,53 @@
 </head>
 <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name">Stalpinth</h1>
-      <h2 class="project-tagline">This website is a work in progress - it's not done.</h2>
+		<h1 class="project-name">Stalpinth</h1>
+		<h2 class="project-tagline">Programming is not that hard. It just takes time.</h2>
 
-      <a href="https://github.com/Stalpinth" class="btn">GitHub Profile</a>
-	  <a href="https://scratch.mit.edu/users/Stalpinth" class="btn">Scratch Profile</a>
-	  <!--<a href="https://codepen.io/Stalpinth" class="btn">Codepen Profile</a>
-	  <a href="https://www.youtube.com/user/Stalpinth" class="btn">Youtube Channel</a>-->
+		<a href="https://github.com/Stalpinth" class="btn">GitHub Profile</a>
+		<a href="https://scratch.mit.edu/users/Stalpinth" class="btn">Scratch Profile</a>
+		<!--<a href="https://codepen.io/Stalpinth" class="btn">Codepen Profile</a>
+		<a href="https://www.youtube.com/user/Stalpinth" class="btn">Youtube Channel</a>-->
+
+		<a href="blog" class="btn">Stalpinth Blog</a>
     </header>
 	<main id="content" class="main-content" role="main">
-	
-	<h1>A little about me</h1>
-	<p>I'm Stalp, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
-	My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
-	I also enjoy playing <a href="http://slither.io">slither.io</a>, 
-	<a href="https://bonk.io">bonk.io</a>, 
-	<a href="http://superhex.io">superhex.io</a>, 
-	<a href="http://spinz.io">spinz.io</a>, 
-	<a href="https://agar.io">agar.io</a>, 
-	<a href="http://www.robtopgames.com/">Geomery Dash</a>, 
-	<a href="https://minecraft.net">Minecraft</a>, and more!</p>
-	
-	<h1>What I'm working on</h1>
-	<ul>
-		<li><a href="blacktown">Blacktown</a></li>
-		<li><a href="https://scratch.mit.edu/projects/253247601/">Slime</a></li>
-		<li><a href="https://scratch.mit.edu/projects/257133713/">Hide</a></li>
-		<li>Stick-Man in Scratch - A chalkboard themed scrolling platformer</li>
-		<li><a href="https://scratch.mit.edu/projects/257106834/">Unnamed</a></li>
-		<li>3d engine in Scratch</li>
-		<li>3d eutorial in Scratch</li>
-		<li>Unnamed tower defense in Scratch</li>
-		<li>Some small javascript games</li>
-	</ul>
-	
-	<h1>Things I've Made</h1>
-	<blockquote class="project">
-	<h3>Project</h3>
-	<p>This project is just... WOW. Such amazing. Much skill. So cool. AND THIS IS JUST TEXT, RIGHT?!?!?!?!!?!?? Even more text about this awesome project. Cool, right?</p>
-	</blockquote>
-	
+		<h1>A little about me</h1>
+		<p>I'm <em>Stalp</em>, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
+		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
+		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
+		<a href="https://bonk.io">bonk.io</a>, 
+		<a href="http://superhex.io">superhex.io</a>, 
+		<a href="http://spinz.io">spinz.io</a>, 
+		<a href="https://agar.io">agar.io</a>, 
+		<a href="http://www.robtopgames.com/">Geomery Dash</a>, 
+		<a href="https://minecraft.net">Minecraft</a>, and more!</p>
+		<!--<p>On my youtube channel is my <em>gaming</sem>. There I upload vidios when I play the games listed above.</p>-->
+		
+		<h1>What I'm working on</h1>
+		<ul>
+			<li><a href="blacktown">Blacktown</a></li>
+			<li><a href="https://scratch.mit.edu/projects/253247601/">Slime</a></li>
+			<li><a href="https://scratch.mit.edu/projects/257133713/">Hide</a></li>
+			<li>Stick-Man in Scratch - A chalkboard themed scrolling platformer</li>
+			<li><a href="https://scratch.mit.edu/projects/257106834/">Unnamed</a></li>
+			<li>3d engine in Scratch</li>
+			<li>3d tutorial in Scratch</li>
+			<li>Unnamed tower defense in Scratch</li>
+			<li>Some small javascript games</li>
+		</ul>
+		
+		<h1>Things I've Made</h1>
+		<div class="projects">
+			<div class="project">
+				<h3>The Secret Message</h3>
+				<p>Try to find out what the secret word is. It isn't so simple that is sounds...</p>
+			</div>
+		</div>	
+		<footer class="site-footer">
+			<span class="site-footer-owner"></span>
+			<span class="site-footer-credits">Used <a href="https://pages.github.com">GitHub Pages</a> theme <a href="https://github.com/pages-themes/cayman">cayman</a>.</span>
+		</footer>
 	</main>
 </body>
 </html>
