--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 		</ul>
 		
 		<h1>Things I've Made</h1>
-		<div class="projects">
+		<!--<div class="projects">
 			<div class="project">
 				<h3>The Secret Message</h3>
 				<p>Try to find out what the secret word is. It isn't so simple that is sounds...</p>
 			</div>
-		</div>	
+		</div>	-->
 		<footer class="site-footer">
 			<span class="site-footer-owner"></span>
 			<span class="site-footer-credits">Used <a href="https://pages.github.com">GitHub Pages</a> theme <a href="https://github.com/pages-themes/cayman">cayman</a>.</span>
