--- a/index.html
+++ b/index.html
@@ -19,32 +19,29 @@
 		<!--<a href="https://codepen.io/Stalpinth" class="btn">Codepen Profile</a>
 		<a href="https://www.youtube.com/user/Stalpinth" class="btn">Youtube Channel</a>-->
 
-		<a href="blog" class="btn">Stalpinth Blog</a>
+		<!--<a href="blog" class="btn">Stalpinth Blog</a>-->
     </header>
 	<main id="content" class="main-content" role="main">
 		<h1>A little about me</h1>
-		<p>I'm <em>Stalp</em>, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
+		<p>I'm <em>Stalpinth</em>, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
 		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
 		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
 		<a href="https://bonk.io">bonk.io</a>, 
 		<a href="http://superhex.io">superhex.io</a>, 
-		<a href="http://spinz.io">spinz.io</a>, 
-		<a href="https://agar.io">agar.io</a>, 
-		<a href="http://www.robtopgames.com/">Geomery Dash</a>, 
+		<a href="http://agma.io">agma.io</a>, 
+		<a href="https://gota.io">gota.io</a>, 
+		<a href="https://balz.io">balz.io</a>, 
+		<a href="https://xgar.io">xgar.io</a>, 
 		<a href="https://minecraft.net">Minecraft</a>, and more!</p>
-		<!--<p>On my youtube channel is my <em>gaming</sem>. There I upload vidios when I play the games listed above.</p>-->
 		
 		<h1>What I'm working on</h1>
 		<ul>
-			<li><a href="blacktown">Blacktown</a></li>
 			<li><a href="https://scratch.mit.edu/projects/253247601/">Slime</a></li>
 			<li><a href="https://scratch.mit.edu/projects/257133713/">Hide</a></li>
-			<li>Stick-Man in Scratch - A chalkboard themed scrolling platformer</li>
-			<li><a href="https://scratch.mit.edu/projects/257106834/">Unnamed</a></li>
-			<li>3d engine in Scratch</li>
-			<li>3d tutorial in Scratch</li>
-			<li>Unnamed tower defense in Scratch</li>
-			<li>Some small javascript games</li>
+			<li><a href="https://scratch.mit.edu/projects/274394574/">Perspective</a></li>
+			<li>3d Engine in Scratch</li>
+			<li>3d Tutorial in Scratch</li>
+			<li>Unfair Platformer in Scratch</li>
 		</ul>
 		
 		<h1>Things I've Made</h1>
