--- a/index.html
+++ b/index.html
@@ -6,24 +6,39 @@
 	<title>Home - Stalpinth</title>
 	<meta charset="UTF-8">
 	
-	<link rel="stylesheet "href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+	<!--<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">-->
+	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Raleway:400,700,900,100">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header class="page-header" role="banner">
-		<h1 class="project-name">Stalpinth</h1>
-		<h2 class="project-tagline">Programming is not that hard. It just takes time.</h2>
-
-		<a href="https://github.com/Stalpinth" class="btn">GitHub Profile</a>
-		<a href="https://scratch.mit.edu/users/Stalpinth" class="btn">Scratch Profile</a>
-		<!--<a href="https://codepen.io/Stalpinth" class="btn">Codepen Profile</a>
-		<a href="https://www.youtube.com/user/Stalpinth" class="btn">Youtube Channel</a>-->
-
-		<!--<a href="blog" class="btn">Stalpinth Blog</a>-->
-    </header>
-	<main id="content" class="main-content" role="main">
-		<h1>A little about me</h1>
-		<p>I'm <em>Stalpinth</em>, a self-taught hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
+	<div class="darkArea">
+		<div class="mainColumn">
+			<div class="topBar">
+				<div class="left">
+					<a href="https://www.stalpinth.com" class="iconLink">
+					<img src="logo.png" alt="Stalpinth" class="siteIcon"/>
+					</a>
+				</div>
+				<div class="right nav">
+					<a href="#work">Work</a>
+					<a href="#about">About</a>
+					<a href="#working">Working On</a>
+					<a href="#contact">Contact</a>
+				</div>
+			</div>
+			<h1 class="pageHeader">Programming is not that hard.<span>It just takes time.</span></h1>
+		</div>
+	</div>
+	<div class="lightArea" id="work">
+		<div class="mainColumn">
+			<h3 class="sectionHeader">Here's some of <span>my work</span>:</h3>
+			
+		</div>
+	</div>
+	<div class="darkArea" id="about">
+		<div class="mainColumn">
+			<h3 class="sectionHeader">A little <span>about me</span>:</h3>
+    <div class="paragraphContent contactList">I'm Stalpinth or Stalp, a <b>self-taught</b> hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
 		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
 		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
 		<a href="https://bonk.io">bonk.io</a>, 
@@ -32,29 +47,38 @@
 		<a href="https://gota.io">gota.io</a>, 
 		<a href="https://balz.io">balz.io</a>, 
 		<a href="https://xgar.io">xgar.io</a>, 
-		<a href="https://minecraft.net">Minecraft</a>, and more!</p>
-		
-		<h1>What I'm working on</h1>
-		<ul>
-			<li><a href="https://scratch.mit.edu/projects/253247601/">Slime</a></li>
-			<li><a href="https://scratch.mit.edu/projects/257133713/">Hide</a></li>
-			<li><a href="https://scratch.mit.edu/projects/274394574/">Perspective</a></li>
-			<li>3d Engine in Scratch</li>
-			<li>3d Tutorial in Scratch</li>
-			<li>Unfair Platformer in Scratch</li>
-		</ul>
-		
-		<h1>Things I've Made</h1>
-		<!--<div class="projects">
-			<div class="project">
-				<h3>The Secret Message</h3>
-				<p>Try to find out what the secret word is. It isn't so simple that is sounds...</p>
-			</div>
-		</div>	-->
-		<footer class="site-footer">
-			<span class="site-footer-owner"></span>
-			<span class="site-footer-credits">Used <a href="https://pages.github.com">GitHub Pages</a> theme <a href="https://github.com/pages-themes/cayman">cayman</a>.</span>
-		</footer>
-	</main>
+		<a href="https://minecraft.net">Minecraft</a>, and more! I'm bad at design and graphics, so I always uses someones else's.</div>
+		</div>
+	</div>
+	<div class="lightArea" id="working">
+	  <div class="mainColumn">
+		<h3 class="sectionHeader">What I'm <span>working on</span>:</h3>
+		<div class="paragraphContent"> This is everything I'm working on. Seriously.
+		<ul class="dashedList contactList">
+		  <li><a href="https://scratch.mit.edu/projects/316044729/">Challenge Accepted</a></li>
+		  <li><a href="https://scratch.mit.edu/users/Stalpinth">2D Pen Tutorials in Scratch</a></li>
+		  <li><a href="https://www.stalpinth.com">Physics Engine</a></li>
+		  <li><a href="https://www.stalpinth.com">Gravitation Simulator</a></li>
+		  <li><a href="https://www.stalpinth.com">Maze Generator and Solver</a></li>
+		  <li><a href="https://www.stalpinth.com">This Website</a></li>
+		</ul>  
+		</div>
+	  </div>
+	</div>
+	<div class="darkArea" id="contact">
+	  <div class="mainColumn">
+		<h3 class="sectionHeader">Were to <span>contact me</span>:</h3>
+		<div class="paragraphContent">The best way to contact me is through one of my profiles on the internet. It doesn't hurt to check out my stuff there too. They are listed here:
+		<ul class="dashedList contactList">
+		  <li><a href="http://scratch.mit.edu/users/Stalpinth">Scratch</a></li>
+		  <li><a href="https://github.com/Stalpinth">Github</a></li>
+		</ul>  
+		</div>
+	  </div>
+	</div>
+	<div class="lightArea" id="about">
+		<div class="mainColumn">
+    <div class="paragraphContent contactList">Thanks to <a href="https://joshuapullen.com">Josh Pullen</a> for the amazing CSS code.</div>
+	</div>
 </body>
 </html>
