--- a/404.html
+++ b/404.html
@@ -12,15 +12,43 @@
 		<title>404 Error - Stalpinth</title>
 		<meta charset="UTF-8">
 		
-		<link rel="stylesheet "href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
+		<link rel="stylesheet "href="https://fonts.googleapis.com/css?family=Raleway:400,700,900,100">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		
+		<style>
+		html { 
+			background: #AFD0ED no-repeat center center fixed; 
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
+		</style>
 	</head>
 	<body>
-		<main class="error404" role="main">
-		  <h1 class="error404-name">404</h1>
-		  <h2 class="error404-tagline">Oh no, you're lost! This page doesn't exist!</h2>
-
-		  <a href="https://www.stalpinth.com" class="btn">Take me home</a>
-		</main>
+		<div class="darkArea">
+			<div class="mainColumn">
+				<div class="topBar">
+					<div class="left">
+						<a href="https://www.stalpinth.com" class="iconLink">
+						<img src="logo.png" alt="Stalpinth" class="siteIcon"/>
+						</a>
+					</div>
+					<div class="right nav">
+						<a href="https://www.stalpinth.com/#work">Work</a>
+						<a href="https://www.stalpinth.com/#about">About</a>
+						<a href="https://www.stalpinth.com/#working">Working On</a>
+						<a href="https://www.stalpinth.com/#contact">Contact</a>
+					</div>
+				</div>
+				<h1 class="pageHeader">Finding the right page is not that hard.<span>It just takes time.</span></h1>
+			</div>
+		</div>
+		<div class="lightArea">
+			<div class="mainColumn contactList">
+				<h3 class="sectionHeader">Oh no!<span> You're lost</span>.</h3>
+				<div class="paragraphContent">Don't worry. You can click <a href="www.stalpinth.com">here</a> to find you're way home, and realize that is was the same as before.</div>
+			</div>
+		</div>
 	</body>
 </html>
