--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
 		<div class="lightArea">
 			<div class="mainColumn contactList">
 				<h3 class="sectionHeader">Oh no!<span> You're lost</span>.</h3>
-				<div class="paragraphContent">Don't worry. You can click <a href="www.stalpinth.com">here</a> to find you're way home, and realize that is was the same as before.</div>
+				<div class="paragraphContent">Don't worry. You can click <a href="https://www.stalpinth.com">here</a> to find you're way home, and realize that is was the same as before.</div>
 			</div>
 		</div>
 	</body>
