--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<h3 class="sectionHeader">A little <span>about me</span>:</h3>
     <div class="paragraphContent contactList">I'm Stalpinth or Stalp, a <b>self-taught</b> hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
 		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
-		I also enjoy playing <a href="http://slither.io">slither.io</a>, 
+		I also enjoy playing 
 		<a href="https://bonk.io">bonk.io</a>, 
 		<a href="http://superhex.io">superhex.io</a>, 
 		<a href="http://agma.io">agma.io</a>, 
