--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		<ul class="dashedList contactList">
 		  <li><a href="https://scratch.mit.edu/projects/316044729/">Challenge Accepted</a></li>
 		  <li><a href="https://scratch.mit.edu/users/Stalpinth">2D Pen Tutorials in Scratch</a></li>
+		  <li><a href="https://scratch.mit.edu/projects/317902606/">A Pen Platformer in Scratch</a></li>
 		  <li><a href="https://www.stalpinth.com">Physics Engine</a></li>
 		  <li><a href="https://www.stalpinth.com">Gravitation Simulator</a></li>
 		  <li><a href="https://www.stalpinth.com">Maze Generator and Solver</a></li>
