--- a/index.html
+++ b/index.html
@@ -1,85 +1,63 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Stalpinth - Coming Soon</title>
+	
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<title>Home - Stalpinth</title>
-	<meta charset="UTF-8">
 	
-	<!--<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">-->
-	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Raleway:400,700,900,100">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway" rel="stylesheet">
 </head>
 <body>
-	<div class="darkArea">
-		<div class="mainColumn">
-			<div class="topBar">
-				<div class="left">
-					<a href="https://www.stalpinth.com" class="iconLink">
-					<img src="logo.png" alt="Stalpinth" class="siteIcon"/>
-					</a>
-				</div>
-				<div class="right nav">
-					<a href="#work">Work</a>
-					<a href="#about">About</a>
-					<a href="#working">Working On</a>
-					<a href="#contact">Contact</a>
-				</div>
-			</div>
-			<h1 class="pageHeader">Programming is not that hard.<span>It just takes time.</span></h1>
+	<div class="hero">
+		<div class="centered">
+			<svg width="32.147999mm" height="38.949001mm" viewBox="0 0 32.147999 38.949001" class="logo">
+				  <g transform="translate(0,-258.051)">
+					<path
+					   style="opacity:1;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:1.92584872;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1"
+					   d="m 0,1036.1289 a 83.974396,86.390919 0 0 0 24.595703,61.0879 83.974396,86.390919 0 0 0 59.378906,25.3027 v -12.1582 a 72.15586,74.232283 0 0 1 -7.203125,-0.3711 72.15586,74.232283 0 0 1 -7.132812,-1.1093 72.15586,74.232283 0 0 1 -6.988281,-1.836 72.15586,74.232283 0 0 1 -6.775391,-2.5429 72.15586,74.232283 0 0 1 -6.494141,-3.2286 72.15586,74.232283 0 0 1 -6.148437,-3.8789 72.15586,74.232283 0 0 1 -5.742188,-4.4902 72.15586,74.232283 0 0 1 -4.537109,-4.2852 72.15586,74.232283 0 0 1 -4.839844,-5.5019 72.15586,74.232283 0 0 1 -4.279297,-5.9727 72.15586,74.232283 0 0 1 -3.68164,-6.3828 72.15586,74.232283 0 0 1 -3.041016,-6.7265 72.15586,74.232283 0 0 1 -2.375,-7.0079 72.15586,74.232283 0 0 1 -1.68164,-7.2148 72.15586,74.232283 0 0 1 -0.972657,-7.3516 72.15586,74.232283 0 0 1 -0.263672,-6.332 z"
+					   id="path831"
+					   transform="scale(0.26458333)"
+					   inkscape:connector-curvature="0" />
+					<path
+					   style="opacity:1;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:3.28592467;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1"
+					   d="m 83.974609,975.3125 a 60.816239,60.816239 0 0 0 -52.667968,30.4082 60.816239,60.816239 0 0 0 0,60.8164 60.816239,60.816239 0 0 0 52.667968,30.4082 v -12.293 a 48.523021,48.523021 0 0 1 -4.84375,-0.2421 48.523021,48.523021 0 0 1 -4.796875,-0.7266 48.523021,48.523021 0 0 1 -4.699218,-1.1992 48.523021,48.523021 0 0 1 -4.556641,-1.6621 48.523021,48.523021 0 0 1 -4.367187,-2.1114 48.523021,48.523021 0 0 1 -4.134766,-2.5351 48.523021,48.523021 0 0 1 -3.861328,-2.9356 48.523021,48.523021 0 0 1 -3.548828,-3.3047 48.523021,48.523021 0 0 1 -3.201172,-3.6445 48.523021,48.523021 0 0 1 -2.820313,-3.9453 48.523021,48.523021 0 0 1 -1.191406,-1.9551 48.523021,48.523021 0 0 1 -2.212891,-4.3164 48.523021,48.523021 0 0 1 -1.769531,-4.5156 48.523021,48.523021 0 0 1 -1.310547,-4.6699 48.523021,48.523021 0 0 1 -0.83789,-4.7774 48.523021,48.523021 0 0 1 -0.357422,-4.8379 48.523021,48.523021 0 0 1 0.128906,-4.8476 48.523021,48.523021 0 0 1 0.611328,-4.8125 48.523021,48.523021 0 0 1 1.087891,-4.7266 48.523021,48.523021 0 0 1 1.554687,-4.5937 48.523021,48.523021 0 0 1 2.00586,-4.416 48.523021,48.523021 0 0 1 1.099609,-2.0098 48.523021,48.523021 0 0 1 2.630859,-4.0742 48.523021,48.523021 0 0 1 3.025391,-3.791 48.523021,48.523021 0 0 1 3.388672,-3.4688 48.523021,48.523021 0 0 1 3.71875,-3.11523 48.523021,48.523021 0 0 1 4.011719,-2.72656 48.523021,48.523021 0 0 1 4.261718,-2.31446 48.523021,48.523021 0 0 1 4.472657,-1.875 48.523021,48.523021 0 0 1 4.638671,-1.42187 48.523021,48.523021 0 0 1 4.75586,-0.94922 48.523021,48.523021 0 0 1 4.828125,-0.4707 48.523021,48.523021 0 0 1 2.289062,-0.0547 z"
+					   id="path825"
+					   transform="scale(0.26458333)"
+					   inkscape:connector-curvature="0" />
+					<path
+					   style="opacity:1;fill:#ffffff;fill-opacity:1;stroke:none;stroke-width:0.31973517;stroke-miterlimit:10;stroke-dasharray:none;stroke-opacity:1"
+					   id="path821"
+					   sodipodi:type="arc"
+					   sodipodi:cx="22.218225"
+					   sodipodi:cy="274.1424"
+					   sodipodi:rx="9.9296865"
+					   sodipodi:ry="9.9296865"
+					   sodipodi:start="1.5707963"
+					   sodipodi:end="0"
+					   d="m 22.218226,284.07208 a 9.9296865,9.9296865 0 0 1 -9.173835,-6.12976 9.9296865,9.9296865 0 0 1 2.152486,-10.82127 9.9296865,9.9296865 0 0 1 10.821275,-2.15249 9.9296865,9.9296865 0 0 1 6.12976,9.17384 h -9.929687 z" />
+				  </g>
+			</svg>
+			<h1 class="title">Stalpinth</h1>
+			<h2 class="heading">Coming Soon</h2>
+			<div class="countdown" id="countdown"><div class="count-box"><h2 class="countdown-num">0</h2> <h4 class="countdown-word">days</h4></div><div class="count-box"><h2 class="countdown-num">0</h2> <h4 class="countdown-word">hours</h4></div><div class="count-box"><h2 class="countdown-num">00</h2> <h4 class="countdown-word">minutes</h4></div><div class="count-box"><h2 class="countdown-num">00</h2> <h4 class="countdown-word">seconds</h4></div></div>
+			<p class="description">This website is under construction, I'm working very hard to give you the best experience with this one.</p>
+			<!--<div class="buttons">
+				<a id="copy-button" href="#" class="button btn-round btn-solid">Copy link</a>
+				<a id="subscribe-button" href="#" class="button btn-round btn-ghost">Follow me</a>
+			</div>-->
+		</div>
+		<div class="social-text">
+			<a href="https://scratch.mit.edu/users/Stalpinth">Scratch</a>
+			<a href="https://github.com/Stalpinth">GitHub</a>
+			<a href="https://codepen.io/Stalpinth">CodePen</a>
 		</div>
 	</div>
-	<div class="lightArea" id="work">
-		<div class="mainColumn">
-			<h3 class="sectionHeader">Here's some of <span>my work</span>:</h3>
-			
-		</div>
-	</div>
-	<div class="darkArea" id="about">
-		<div class="mainColumn">
-			<h3 class="sectionHeader">A little <span>about me</span>:</h3>
-    <div class="paragraphContent contactList">I'm Stalpinth or Stalp, a <b>self-taught</b> hobby programmer that code in Scratch, C#, javascript, HTML, CSS and SCSS.
-		My <a href="https://scratch.mit.edu/projects/252837365/">first project</a> was finished 2017-12-15. <br>
-		I also enjoy playing 
-		<a href="https://bonk.io">bonk.io</a>, 
-		<a href="http://superhex.io">superhex.io</a>, 
-		<a href="http://agma.io">agma.io</a>, 
-		<a href="https://gota.io">gota.io</a>, 
-		<a href="https://balz.io">balz.io</a>, 
-		<a href="https://xgar.io">xgar.io</a>, 
-		<a href="https://minecraft.net">Minecraft</a>, and more! I'm bad at design and graphics, so I always uses someones else's.</div>
-		</div>
-	</div>
-	<div class="lightArea" id="working">
-	  <div class="mainColumn">
-		<h3 class="sectionHeader">What I'm <span>working on</span>:</h3>
-		<div class="paragraphContent"> This is everything I'm working on. Seriously.
-		<ul class="dashedList contactList">
-		  <li><a href="https://scratch.mit.edu/projects/316044729/">Challenge Accepted</a></li>
-		  <li><a href="https://scratch.mit.edu/users/Stalpinth">2D Pen Tutorials in Scratch</a></li>
-		  <li><a href="https://scratch.mit.edu/projects/317902606/">Locked in Square</a></li>
-		  <li><a href="https://www.stalpinth.com">Physics Engine</a></li>
-		  <li><a href="https://www.stalpinth.com">Gravitation Simulator</a></li>
-		  <li><a href="https://www.stalpinth.com">Maze Generator and Solver</a></li>
-		  <li><a href="https://www.stalpinth.com">This Website</a></li>
-		</ul>  
-		</div>
-	  </div>
-	</div>
-	<div class="darkArea" id="contact">
-	  <div class="mainColumn">
-		<h3 class="sectionHeader">Were to <span>contact me</span>:</h3>
-		<div class="paragraphContent">The best way to contact me is through one of my profiles on the internet. It doesn't hurt to check out my stuff there too. They are listed here:
-		<ul class="dashedList contactList">
-		  <li><a href="http://scratch.mit.edu/users/Stalpinth">Scratch</a></li>
-		  <li><a href="https://github.com/Stalpinth">Github</a></li>
-		</ul>  
-		</div>
-	  </div>
-	</div>
-	<div class="lightArea" id="about">
-		<div class="mainColumn">
-    <div class="paragraphContent contactList">Thanks to <a href="https://joshuapullen.com">Josh Pullen</a> for the amazing CSS code.</div>
-	</div>
+	<!--<textarea id="copy-text" style="position:absolute;top:0;z-index:-10;">https://www.stalpinth.com</textarea>-->
 </body>
 </html>
+
+<!-- Photo by Sebastian Unrau on Unsplash -->
