--- a/tools/kongruenser.html
+++ b/tools/kongruenser.html
@@ -252,10 +252,10 @@
 	</div>
 	<footer>
 		<h3>Programming isn't hard.<br>It just takes time.</h3>
-		<h2><a href="https://scratch.mit.edu/users/Stalpinth"><img src="../scratch.svg" height="30px" alt="Scratch"></a>&ensp;
-			<a href="https://github.com/Stalpinth"><img src="../github.svg" width="30px" alt="GitHub"></a>&ensp;
-			<a href="https://codepen.io/Stalpinth"><img src="../codepen.svg" width="30px" alt="CodePen"></a>&ensp;
-			<a href="https://dribbble.com/Stalpinth"><img src="../dribbble.svg" width="30px" alt="Dribbble"></a><!--&ensp;
+		<h2><a href="https://scratch.mit.edu/users/Stalpinth"><img src="scratch.svg" height="30px" alt="Scratch"></a>&ensp;
+			<a href="https://github.com/Stalpinth"><img src="github.svg" width="30px" alt="GitHub"></a>&ensp;
+			<a href="https://codepen.io/Stalpinth"><img src="codepen.svg" width="30px" alt="CodePen"></a>&ensp;
+			<a href="https://dribbble.com/Stalpinth"><img src="dribbble.svg" width="30px" alt="Dribbble"></a><!--&ensp;
 			<a href="https://www.youtube.com/channel/UC7JkCdi7cGjiqK2o-rdlEnw"><img src="youtube.svg" height="30px" alt="YouTube"></a>-->
 		</h2>
 		<p>Copyright &copy; 2020 Stalpinth. All Rights Reserved.</p><br><br><br>
